--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestThreadCommentMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestThreadCommentMain.xaml
@@ -71,21 +71,21 @@
 
                         <dxg:GridColumn FieldName="id" />
                         <dxg:GridColumn FieldName="parentCommentId" />
-                        <dxg:GridColumn FieldName="author.displayName" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="content" BestFitModeOnSourceChange="VisibleRows" />
+                        <dxg:GridColumn FieldName="author.displayName" />
+                        <dxg:GridColumn FieldName="content"  />
                         <dxg:GridColumn FieldName="commentType" />
 
-                        <dxg:GridColumn FieldName="publishedDate" BestFitModeOnSourceChange="VisibleRows">
+                        <dxg:GridColumn FieldName="publishedDate" >
                             <dxg:GridColumn.EditSettings>
                                 <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                             </dxg:GridColumn.EditSettings>
                         </dxg:GridColumn>
-                        <dxg:GridColumn FieldName="lastUpdatedDate" BestFitModeOnSourceChange="VisibleRows">
+                        <dxg:GridColumn FieldName="lastUpdatedDate" >
                             <dxg:GridColumn.EditSettings>
                                 <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                             </dxg:GridColumn.EditSettings>
                         </dxg:GridColumn>
-                        <dxg:GridColumn FieldName="lastContentUpdatedDate" BestFitModeOnSourceChange="VisibleRows">
+                        <dxg:GridColumn FieldName="lastContentUpdatedDate" >
                             <dxg:GridColumn.EditSettings>
                                 <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                             </dxg:GridColumn.EditSettings>
