--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestAttachmentMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestAttachmentMain.xaml
@@ -34,7 +34,7 @@
 
     </UserControl.Resources>
 
-    <Grid>
+    <Grid MaxHeight="4096">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -62,7 +62,7 @@
 
         </dxg:GridControl>
 
-                <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+        <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
             <dxlc:LayoutItem Label="Url" >
                 <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
             </dxlc:LayoutItem>
