--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestCommitChangeMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestCommitChangeMain.xaml
@@ -1,5 +1,5 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Git.Presentation.Views.PullRequestCommitMain"
+    x:Class="AZDORestApiExplorer.Git.Presentation.Views.PullRequestCommitChangeMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -12,9 +12,9 @@
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-    
-    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"    
 
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     
@@ -36,13 +36,21 @@
 
     </UserControl.Resources>
 
-    <dxlc:LayoutControl Orientation="Vertical" MaxHeight="4096" >
+    <!--
+        TODO(crhodes)
+        This is setup for a grid at the top and drill down detail below.
+        Toss what is not needed.
+    -->
+    
+    <dxlc:LayoutControl Orientation="Vertical">
+
+        <dxlc:LayoutGroup Orientation="Vertical" >
 
             <dxlc:LayoutGroup View="GroupBox"
                               Collapsed="LayoutGroup_ExpansionChanged" 
                               Expanded="LayoutGroup_ExpansionChanged"
                               IsCollapsible="True" IsCollapsed="False" >
-                
+                              
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -50,56 +58,48 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <vncazdopv:CommonGridHeader x:Name="commonGridHeaderCommits" Grid.Row="0"
-                                                    Count="{Binding Results.Count, Mode=TwoWay}"/>
+                    <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
+                                                Count="{Binding Results.Count, Mode=TwoWay}"/>
 
                     <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                            ItemsSource="{Binding Results.ResultItems}"
-                            SelectedItem="{Binding Results.SelectedItem}"
-                            FontSize="12"
-                            ScrollViewer.CanContentScroll="True"
-                            ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                            ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-                                    <dxg:GridColumn FieldName="commitId" />
-
-                                    <dxg:GridColumn FieldName="author.name" Header="Author" />
-                                    <dxg:GridColumn FieldName="author.date" Header="Authored Date" Width="150">
-                                        <dxg:GridColumn.EditSettings>
-                                            <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                                        </dxg:GridColumn.EditSettings>
-                                    </dxg:GridColumn>
-
-                                    <dxg:GridColumn FieldName="committer.name" Header="Committer" />
-                                    <dxg:GridColumn FieldName="committer.date" Header="Committer Date" Width="150">
-                                        <dxg:GridColumn.EditSettings>
-                                            <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                                        </dxg:GridColumn.EditSettings>
-                                    </dxg:GridColumn>
-
-                                    <dxg:GridColumn FieldName="changeCounts.Add" Header="Adds" Width="50" />
-                                    <dxg:GridColumn FieldName="changeCounts.Delete" Header="Deletes" Width="50" />
-                                    <dxg:GridColumn FieldName="changeCounts.Edit" Header="Edits" Width="50" />
-                                    <dxg:GridColumn FieldName="comment" Width="*"/>
-                                    <dxg:GridColumn FieldName="commentTruncated" />
-                                    <!--<dxg:GridColumn FieldName="url" />-->
+                        ItemsSource="{Binding Results.ResultItems}"
+                        SelectedItem="{Binding Results.SelectedItem}"
+                        FontSize="12"
+                        ScrollViewer.CanContentScroll="True"
+                        ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                        ScrollViewer.VerticalScrollBarVisibility="Auto">
+                                
+                        <dxg:GridColumn FieldName="changeTrackingId" Header="Change TrackingId" />
+                        <dxg:GridColumn FieldName="changeId" Header="ChangeId"/>
+                        <dxg:GridColumn FieldName="changeType" Header="ChangeType" />
+                        <dxg:GridColumn FieldName="item.objectId" Header="Item.objectId" />
+                        <dxg:GridColumn FieldName="item.originalObjectId" Header="Item.originalObjectId"/>
+                        <dxg:GridColumn FieldName="item.path" Header="Item.path" />
+                        
+                        <!--<dxg:GridColumn FieldName="changeId" Header="Date" Width="150">
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>-->
+                        
                     </dxg:GridControl>
 
-                    <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+                    <dxlc:LayoutGroup Grid.Row="2" Header="Selected Item Details" 
+                                      Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" >
                         <dxlc:LayoutItem Label="Url" >
                             <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
                         </dxlc:LayoutItem>
                     </dxlc:LayoutGroup>
-        
-                </Grid>
+
+                </Grid>                
 
             </dxlc:LayoutGroup>
 
             <!--
-                This shows the items dependent on a Pull Request in separate tabs
+                This shows the items dependent on a PullRequestIterationChange in separate tabs
                 The particular information is in a separate view.
-            -->
-
+            --><!--
+            
             <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs" >
 
                 <dxlc:LayoutGroup.GroupBoxStyle>
@@ -112,12 +112,14 @@
                     </Style>
                 </dxlc:LayoutGroup.GroupBoxStyle>
 
-                <dxlc:LayoutGroup Header="Commit Changes" >
-                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestCommitChangeMainRegion}" />
+                <dxlc:LayoutGroup Header="XXX Detail" >
+                    --><!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.XXX}" />--><!--
                 </dxlc:LayoutGroup>
 
-            </dxlc:LayoutGroup>
+            </dxlc:LayoutGroup>-->
 
-    </dxlc:LayoutControl>
+        </dxlc:LayoutGroup>
+
+    </dxlc:LayoutControl>                
 
 </vncmvvm:ViewBase>
