--- a/AZDORestApiExplorer.Git/Presentation/Views/RefMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/RefMain.xaml
@@ -52,14 +52,14 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows" />
+            <dxg:GridColumn FieldName="name"  />
 
-            <dxg:GridColumn FieldName="creator.displayName" Header="Creator" BestFitModeOnSourceChange="VisibleRows" />
-            <!--<dxg:GridColumn FieldName="creator.uniqueName" BestFitModeOnSourceChange="VisibleRows" />-->
+            <dxg:GridColumn FieldName="creator.displayName" Header="Creator"  />
+            <!--<dxg:GridColumn FieldName="creator.uniqueName" />-->
             <dxg:GridColumn FieldName="isLocked" />
-            <dxg:GridColumn FieldName="isLockedBy.displayName" Header="IsLockedBy" BestFitModeOnSourceChange="VisibleRows" />
-            <!--<dxg:GridColumn FieldName="isLockedBy.uniqueName" BestFitModeOnSourceChange="VisibleRows" />-->
-            <dxg:GridColumn FieldName="objectId" BestFitModeOnSourceChange="VisibleRows" />            
+            <dxg:GridColumn FieldName="isLockedBy.displayName" Header="IsLockedBy"  />
+            <!--<dxg:GridColumn FieldName="isLockedBy.uniqueName"  />-->
+            <dxg:GridColumn FieldName="objectId"  />            
             
         </dxg:GridControl>
 
