--- a/AZDORestApiExplorer.Git/Presentation/Views/StatMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/StatMain.xaml
@@ -52,23 +52,23 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.commitId" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.author.name" Header="Author" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.author.date" Header="Authored Date" BestFitModeOnSourceChange="VisibleRows" >
+            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="commit.commitId" />
+            <dxg:GridColumn FieldName="commit.author.name" Header="Author" />
+            <dxg:GridColumn FieldName="commit.author.date" Header="Authored Date"  >
                 <dxg:GridColumn.EditSettings>
                     <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                 </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
-            <dxg:GridColumn FieldName="commit.committer.name" Header="Committer" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.committer.date" Header="Committed Date" BestFitModeOnSourceChange="VisibleRows" >
+            <dxg:GridColumn FieldName="commit.committer.name" Header="Committer" />
+            <dxg:GridColumn FieldName="commit.committer.date" Header="Committed Date"  >
                 <dxg:GridColumn.EditSettings>
                     <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                 </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
-            <dxg:GridColumn FieldName="aheadCount" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="behindCount" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="isBaseVersion" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="aheadCount" />
+            <dxg:GridColumn FieldName="behindCount" />
+            <dxg:GridColumn FieldName="isBaseVersion" />
 
         </dxg:GridControl>
 
